--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -14,6 +14,7 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>1、配置参数接口</h4>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">命令标识:</label>
                 <input type="text" class="form-control" id="cmd">
@@ -22,7 +23,12 @@
                 <label for="recipient-name" class="control-label">服务器地址:</label>
                 <input type="text" class="form-control" id="val">
             </div>
-            <button type="button" class="btn btn-primary" onclick="ConfigParameters()">配置参数接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="ConfigParameters()">配置参数接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="ConfigParametersTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -31,7 +37,12 @@
                 <label for="recipient-name" class="control-label">命令标识:</label>
                 <input type="text" class="form-control" id="get-cmd">
             </div>
-            <button type="button" class="btn btn-primary" onclick="GetParameters()">获取配置参数接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="GetParameters()">获取配置参数接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="GetParametersTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -44,7 +55,13 @@
                 <label for="recipient-name" class="control-label">二维码图片存放路径（图片格式为png）:</label>
                 <input type="text" class="form-control" id="img-path" value="/images/" disabled>
             </div>
-            <button type="button" class="btn btn-primary" onclick="RCode()">请求二维码接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="RCode()">请求二维码接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="RCodeTxt" cols="150" rows="5"></textarea>
+            </div>
+
         </div>
     </div>
     <div class="panel panel-default">
@@ -53,12 +70,23 @@
                 <label for="Numbering" class="control-label">接入方编号:</label>
                 <input type="text" class="form-control" id="Numbering">
             </div>
-            <button type="button" class="btn btn-primary" onclick="Transid()">获取流水号接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="Transid()">获取流水号接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="TransidTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
-            <button type="button" class="btn btn-primary" onclick="GetUserList()">获取证书列表接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="GetUserList()">获取证书列表接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="GetUserListTxt" cols="150" rows="5"></textarea>
+            </div>
+
         </div>
     </div>
     <div class="panel panel-default">
@@ -71,7 +99,13 @@
                 <label for="containerId2" class="control-label">容器名，可为空:</label>
                 <input type="text" class="form-control" id="containerId2">
             </div>
-            <button type="button" class="btn btn-primary" onclick="GetCertBase64String()">获取数字证书接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="GetCertBase64String()">获取数字证书接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="GetCertBase64StringTxt" cols="150" rows="5"></textarea>
+            </div>
+
         </div>
     </div>
     <div class="panel panel-default">
@@ -84,7 +118,13 @@
                 <label for="type" class="control-label">1、证书版本；2、证书序列号:</label>
                 <input type="text" class="form-control" id="type">
             </div>
-            <button type="button" class="btn btn-primary" onclick="GetCertInfo()">获取证书信息接口</button>
+
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="GetCertInfo()">获取证书信息接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="GetCertInfoTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -97,7 +137,13 @@
                 <label for="password" class="control-label">6位证书口令，可为空:</label>
                 <input type="text" class="form-control" id="password">
             </div>
-            <button type="button" class="btn btn-primary" onclick="CertLogin()">证书口令验证接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="CertLogin()">证书口令验证接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="CertLoginTxt" cols="150" rows="5"></textarea>
+            </div>
+
         </div>
     </div>
     <div class="panel panel-default">
@@ -106,12 +152,24 @@
                 <label for="containerId2" class="control-label">唯一标识:</label>
                 <input type="text" class="form-control" id="containerId2">
             </div>
-            <button type="button" class="btn btn-primary" onclick="GetPinRetryCount()">获取密码重试剩余次数接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="GetPinRetryCount()">获取密码重试剩余次数接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="GetPinRetryCountTxt" cols="150" rows="5"></textarea>
+            </div>
+
         </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
-            <button type="button" class="btn btn-primary" onclick="VerifyIdentity()">验证证书有效性接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="VerifyIdentity()">验证证书有效性接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="VerifyIdentityTxt" cols="150" rows="5"></textarea>
+            </div>
+
         </div>
     </div>
     <div class="panel panel-default">
@@ -124,33 +182,26 @@
                 <label for="authNo" class="control-label">授权码（32位UUID）:</label>
                 <input type="text" class="form-control" id="authNo">
             </div>
-            <button type="button" class="btn btn-primary" onclick="KeyGetKeySn()">获取证书用户标识接口</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="KeyGetKeySn()">获取证书用户标识接口</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="KeyGetKeySnTxt" cols="150" rows="5"></textarea>
+            </div>
+
         </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
-            <button type="button" class="btn btn-primary" onclick="changePwd()">获取证书用户标识</button>
+
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="changePwd()">获取证书用户标识</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="changePwdTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
-    <!--模态弹出框-->
-    <div class="modal fade" tabindex="-1" role="dialog" id="mymodel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="text">Modal title</h4>
-                </div>
-                <div class="modal-body">
-                    <h4 class="text-success" id="text1"></h4>
-                    <h4 class="text-success" id="text2"></h4>
-                    <h4 class="text-success" id="text3"></h4>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
 </div>
 </body>
 <script src="https://cdn.bootcss.com/html5shiv/r29/html5.js"></script>
@@ -158,54 +209,59 @@
 <script src="/javascripts/ajax.js" type="text/javascript"></script>
 <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script type="text/javascript">
+    //3.2.1.1.参数配置接口
     function ConfigParameters(){
-        let url=commonUrl+"/RS_ConfigParameters";
-        let data={
-            cmd:$("#cmd").val(),
-            val:$("#val").val()
-        }
-        ajax(url, data,false,false, false, false, 'get','json');
-//        $.ajax({
-//            url:"/RS_ConfigParameters",
-//            type:"get",
-//            data:{
-//                cmd:$("#cmd").val(),
-//                val:$("#val").val(),
-//            },
-//            success:function(res){
+//        let url=commonUrl+"/RS_ConfigParameters";
+//        let data={
+//            cmd:$("#cmd").val(),
+//            val:$("#val").val()
+//        }
+//        ajax(url, data,false,false, false, false, 'get','json');
+//        document.getElementById("ConfigParametersTxt").innerHTML = smgdata;
+        $.ajax({
+            url:commonUrl+"/RS_ConfigParameters",
+            type:"get",
+            data:{
+                cmd:$("#cmd").val(),
+                val:$("#val").val(),
+            },
+            success:function(res){
 //                $("#text").html("3.2.1.1.参数配置接口");
 //                JudgeCode(res);
 //                $('#mymodel').modal('show')
-//                console.log(res);
-//            },
-//            error:function(res){
-//                console.log(res);
-//            }
-//        });
+                var smg=JSON.stringify(res);
+                document.getElementById("ConfigParametersTxt").innerHTML = smg;
+                console.log(res);
+            },
+            error:function(res){
+                console.log(res);
+            }
+        });
     }
+    //3.2.1.2.获取配置参数接口
     function GetParameters(){
-        let url=commonUrl+"/RS_GetParameters";
-        let data={
-            cmd:$("#get-cmd").val(),
-        }
-        ajax(url, data,false,false, false, false, 'post','json');
-//        $.ajax({
-//            url:commonUrl+"/RS_GetParameters",
-//            type:"post",
-//            data:{
-//                cmd:$("#get-cmd").val(),
-//            },
-//            success:function(res){
-//                $("#text").html("3.2.1.2.获取配置参数接口");
-//                JudgeCode(res);
-//                $('#mymodel').modal('show')
-//                console.log(res);
-//            },
-//            error:function(res){
-//                console.log(res);
-//            }
-//        });
+//        let url=commonUrl+"/RS_GetParameters";
+//        let data={
+//            cmd:$("#get-cmd").val(),
+//        }
+//        ajax(url, data,false,false, false, false, 'post','json');
+        $.ajax({
+            url:commonUrl+"/RS_GetParameters",
+            type:"post",
+            data:{
+                cmd:$("#get-cmd").val(),
+            },
+            success:function(res){
+                var smg=JSON.stringify(res);
+                document.getElementById("GetParametersTxt").innerHTML = smg;
+                console.log(res);
+            },
+            error:function(res){
+                console.log(res);
+            }
+        });
     }
+    //3.2.1.4.生成二维码图片接口
     function RCode(){
         $.ajax({
             url:commonUrl+"/RS_GreateQRCode",
@@ -215,9 +271,8 @@
                 path:$("img-path").val()
             },
             success:function(res){
-                $("#text").html("3.2.1.4.生成二维码图片接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("RCodeTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -225,6 +280,7 @@
             }
         });
     }
+    //3.2.1.5.获取流水号接口
     function Transid(){
         $.ajax({
             url:commonUrl+"/RS_GetTransid",
@@ -233,9 +289,8 @@
                 joinCode:"123142",
             },
             success:function(res){
-                $("#text").html("3.2.1.5.获取流水号接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("TransidTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -243,6 +298,7 @@
             }
         });
     }
+    //3.2.2.1.获取证书列表接口
     function GetUserList(){
         $.ajax({
             url:commonUrl+"/RS_GetUserList",
@@ -250,9 +306,8 @@
             data:{
             },
             success:function(res){
-                $("#text").html("3.2.2.1.获取证书列表接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("GetUserListTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -260,7 +315,7 @@
             }
         });
     }
-
+    //3.2.2.2.获取数字证书接口
     function GetCertBase64String(){
         $.ajax({
             url:commonUrl+"/RS_GetCertBase64String",
@@ -270,9 +325,8 @@
                 containerId:"123142"
             },
             success:function(res){
-                $("#text").html("3.2.2.2.获取数字证书接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("GetCertBase64StringTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -280,7 +334,7 @@
             }
         });
     }
-
+    //3.2.2.3.获取证书信息接口
     function GetCertInfo(){
         $.ajax({
             url:commonUrl+"/RS_GetCertInfo",
@@ -290,9 +344,8 @@
                 type:"1",
             },
             success:function(res){
-                $("#text").html("3.2.2.3.获取证书信息接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("GetCertInfoTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -300,7 +353,7 @@
             }
         });
     }
-
+    //3.2.2.4.证书口令验证接口
     function CertLogin(){
         $.ajax({
             url:commonUrl+"/RS_CertLogin",
@@ -310,9 +363,8 @@
                 password:"1",
             },
             success:function(res){
-                $("#text").html("3.2.2.4.证书口令验证接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show');
+                var smg=JSON.stringify(res);
+                document.getElementById("CertLoginTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -320,7 +372,7 @@
             }
         });
     }
-
+    //3.2.2.5.获取密码重试剩余次数接口
     function GetPinRetryCount(){
         $.ajax({
             url:commonUrl+"/RS_GetPinRetryCount",
@@ -329,9 +381,8 @@
                 containerId:"123142"
             },
             success:function(res){
-                $("#text").html("3.2.2.5.获取密码重试剩余次数接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show');
+                var smg=JSON.stringify(res);
+                document.getElementById("GetPinRetryCountTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -339,7 +390,7 @@
             }
         });
     }
-
+    //3.2.2.6.修改证书口令接口
     function changePwd(){
         $.ajax({
             url:commonUrl+"/RS_ChangePassWd",
@@ -348,9 +399,8 @@
 
             },
             success:function(res){
-                $("#text").html("3.2.2.6.修改证书口令接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show');
+                var smg=JSON.stringify(res);
+                document.getElementById("changePwdTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -358,7 +408,7 @@
             }
         });
     }
-
+    //3.2.2.7.验证证书有效性接口
     function VerifyIdentity(){
         $.ajax({
             url:commonUrl+"/RS_VerifyIdentity",
@@ -368,9 +418,8 @@
                 authNoL:""
             },
             success:function(res){
-                $("#text").html("3.2.2.7.验证证书有效性接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show');
+                var smg=JSON.stringify(res);
+                document.getElementById("VerifyIdentityTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -388,9 +437,8 @@
             data:{
             },
             success:function(res){
-                $("#text").html("3.2.2.8.获取证书用户标识接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show');
+                var smg=JSON.stringify(res);
+                document.getElementById("KeyGetKeySnTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
