--- a/myapp/views/interface.ejs
+++ b/myapp/views/interface.ejs
@@ -26,7 +26,12 @@
                 <label for="Identification" class="control-label">是否带原文的标识，1:不带原文;0:带原文:</label>
                 <input type="text" class="form-control" id="Identification">
             </div>
-            <button type="button" class="btn btn-primary" onclick="VerifySignByP7()">P7验签</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="VerifySignByP7()">P7验签</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="VerifySignByP7Txt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -39,7 +44,12 @@
                 <label for="containerId" class="control-label">唯一标识:</label>
                 <input type="text" class="form-control" id="containerId">
             </div>
-            <button type="button" class="btn btn-primary" onclick="KeyDigitalSignByP1()">P1签名（域签）</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="KeyDigitalSignByP1()">P1签名（域签）</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="KeyDigitalSignByP1Txt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -56,7 +66,12 @@
                 <label for="signdMsg" class="control-label">签名值:</label>
                 <input type="text" class="form-control" id="signdMsg">
             </div>
-            <button type="button" class="btn btn-primary" onclick="VerifyDigitalSignByP1()">P1验签（域签）</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="VerifyDigitalSignByP1()">P1验签（域签）</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="VerifyDigitalSignByP1Txt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -65,8 +80,13 @@
                 <label for="msg" class="control-label">待签名原文:</label>
                 <input type="text" class="form-control" id="msg">
             </div>
-            <button type="button" class="btn btn-primary" onclick="KeySignByP1()">P1签名</button>
-        </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="KeySignByP1()">P1签名</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="KeySignByP1Txt" cols="150" rows="5"></textarea>
+            </div>
+
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
@@ -82,7 +102,13 @@
                 <label for="signdMsg2" class="control-label">签名值:</label>
                 <input type="text" class="form-control" id="signdMsg2">
             </div>
-            <button type="button" class="btn btn-primary" onclick="VerifySignByP1()">P1验名</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="VerifySignByP1()">P1验名</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="VerifySignByP1Txt" cols="150" rows="5"></textarea>
+            </div>
+
         </div>
     </div>
     <div class="panel panel-default">
@@ -95,7 +121,13 @@
                 <label for="flag" class="control-label">是否带原文的标识，1:不带原文;0:带原文:</label>
                 <input type="text" class="form-control" id="flag">
             </div>
-            <button type="button" class="btn btn-primary" onclick="KeySignByP7()">P7签名</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="KeySignByP7()">P7签名</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="KeySignByP7Txt" cols="150" rows="5"></textarea>
+            </div>
+
         </div>
     </div>
 
@@ -124,6 +156,7 @@
 <script src="/javascripts/ajax.js" type="text/javascript"></script>
 <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script>
+    //3.2.1.3.P7验签接口
     function VerifySignByP7(){
         $.ajax({
             url:commonUrl+"/RS_VerifySignByP7",
@@ -134,9 +167,8 @@
                 flag:$("#Identification").val()
             },
             success:function(res){
-                $("#text").html("3.2.1.3.P7验签接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("VerifySignByP7Txt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -144,6 +176,7 @@
             }
         });
     }
+    //3.2.2.9.P1签名接口（域签）
     function KeyDigitalSignByP1(){
         $.ajax({
             url:commonUrl+"/RS_KeyDigitalSignByP1",
@@ -153,9 +186,8 @@
                 containerId:"cvaw",
             },
             success:function(res){
-                $("#text").html("3.2.2.9.P1签名接口（域签）");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("KeyDigitalSignByP1Txt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -163,6 +195,7 @@
             }
         });
     }
+    //3.2.2.10.P1验签接口（域签）
     function VerifyDigitalSignByP1(){
         $.ajax({
             url:commonUrl+"/RS_VerifyDigitalSignByP1",
@@ -171,9 +204,8 @@
 
             },
             success:function(res){
-                $("#text").html("3.2.2.10.P1验签接口（域签）");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("VerifyDigitalSignByP1Txt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -181,6 +213,7 @@
             }
         });
     }
+    //3.2.2.11.P1签名接口
     function KeySignByP1(){
         $.ajax({
             url:commonUrl+"/RS_KeySignByP1",
@@ -189,9 +222,8 @@
 
             },
             success:function(res){
-                $("#text").html("3.2.2.11.P1签名接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("KeySignByP1Txt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -199,7 +231,7 @@
             }
         });
     }
-
+//3.2.2.12.P1验签接口
     function VerifySignByP1(){
         $.ajax({
             url:commonUrl+"/RS_KeyVerifySignByP1 ",
@@ -208,9 +240,8 @@
 
             },
             success:function(res){
-                $("#text").html("3.2.2.12.P1验签接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("VerifySignByP1Txt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -218,6 +249,7 @@
             }
         });
     }
+    //3.2.2.13.P7签名接口
     function KeySignByP7(){
         $.ajax({
             url:commonUrl+"/RS_KeySignByP7",
@@ -226,9 +258,8 @@
 
             },
             success:function(res){
-                $("#text").html("3.2.2.13.P7签名接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("KeySignByP7Txt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
