--- a/myapp/views/secret.ejs
+++ b/myapp/views/secret.ejs
@@ -22,9 +22,14 @@
                 <label for="recipient-name" class="control-label">加密后文件保存路径，带文件名:</label>
                 <input type="text" class="form-control" id="encryption" value="/file/test.txt" disabled>
             </div>
-            <button type="button" class="btn btn-primary" onclick="EncryptFile()">对称加密</button>
-            <button type="button" class="btn btn-primary" onclick="EncryptFile()">查看待加密文件</button>
-            <button type="button" class="btn btn-primary" onclick="EncryptFile()">查看加密文件</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="EncryptFile()">对称加密</button>
+                <button type="button" class="btn btn-primary" onclick="EncryptFile()">查看待加密文件</button>
+                <button type="button" class="btn btn-primary" onclick="EncryptFile()">查看加密文件</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="EncryptFileTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -41,9 +46,14 @@
                 <label for="recipient-name" class="control-label">解密后文件保存路径，带文件名:</label>
                 <input type="text" class="form-control" id="decryptedFiles" value="/file/test.txt" disabled>
             </div>
-            <button type="button" class="btn btn-primary" onclick="DevryptFile()">对称解密</button>
-            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看加密文件</button>
-            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看解密文件</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="DevryptFile()">对称解密</button>
+                <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看加密文件</button>
+                <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看解密文件</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="DevryptFileTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -56,7 +66,12 @@
                 <label for="certBase64" class="control-label">证书base64编码:</label>
                 <input type="text" class="form-control" id="certBase64">
             </div>
-            <button type="button" class="btn btn-primary" onclick="KeyEncryptData()">非对称加密</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="KeyEncryptData()">非对称加密</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="KeyEncryptDataTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -65,7 +80,14 @@
                 <label for="encRsKey" class="control-label">待解密的密文:</label>
                 <input type="text" class="form-control" id="encRsKey">
             </div>
-            <button type="button" class="btn btn-primary" onclick="KeyEncryptData()">非对称解密</button>
+
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="KeyDecryptData()">非对称解密</button>
+            </div>
+            <div class="form-group">
+
+                <textarea class="form-control" id="KeyDecryptDataTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -82,9 +104,14 @@
                 <label for="certBase" class="control-label">证书base64编码:</label>
                 <input type="text" class="form-control" id="certBase">
             </div>
-            <button type="button" class="btn btn-primary" onclick="KeyEncryptByDigitalEnvelope()">数字信封加密</button>
-            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看加密文件</button>
-            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看解密文件</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="KeyEncryptByDigitalEnvelope()">数字信封加密</button>
+                <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看加密文件</button>
+                <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看解密文件</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="KeyEncryptTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
@@ -101,9 +128,14 @@
                 <label for="encRsKeyPath" class="control-label">对称密钥信息文件路径，带文件名:</label>
                 <input type="text" class="form-control" id="encRsKeyPath" value="/file/test.txt" disabled>
             </div>
-            <button type="button" class="btn btn-primary" onclick="KeyDecryptByDigitalEnvelope()">数字信封解密</button>
-            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看加密文件</button>
-            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看解密文件</button>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="KeyDecryptByDigitalEnvelope()">数字信封解密</button>
+                <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看加密文件</button>
+                <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看解密文件</button>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" id="KeyDecryptByDigitalTxt" cols="150" rows="5"></textarea>
+            </div>
         </div>
     </div>
     <div class="modal fade" tabindex="-1" role="dialog" id="mymodel">
@@ -131,7 +163,7 @@
 <script src="/javascripts/ajax.js" type="text/javascript"></script>
 <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script>
-
+    //3.2.1.6.对称加密接口
     function EncryptFile(){
         $.ajax({
             url:commonUrl+"/RS_EncryptFile",
@@ -141,9 +173,8 @@
                 encFilePath:$("#encryption").val()
             },
             success:function(res){
-                $("#text").html("3.2.1.6.对称加密接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("EncryptFileTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -151,6 +182,7 @@
             }
         });
     }
+    //3.2.1.7.对称解密接口
     function DevryptFile(){
         $.ajax({
             url:commonUrl+"/RS_DevryptFile",
@@ -161,9 +193,8 @@
                 dncDirectoryPath:$("#decryptedFiles").val()
             },
             success:function(res){
-                $("#text").html("3.2.1.7.对称解密接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("DevryptFileTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -171,6 +202,7 @@
             }
         });
     }
+    //3.2.2.14.非对称加密接口
     function KeyEncryptData(){
         $.ajax({
             url:commonUrl+"/RS_KeyEncryptData",
@@ -180,9 +212,8 @@
                 certBase64:"zcxv"
             },
             success:function(res){
-                $("#text").html("3.2.2.14.非对称加密接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("KeyEncryptDataTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -190,6 +221,7 @@
             }
         });
     }
+    //3.2.2.15.非对称解密接口
     function KeyDecryptData(){
         $.ajax({
             url:commonUrl+"/RS_KeyDecryptData",
@@ -198,9 +230,8 @@
 
             },
             success:function(res){
-                $("#text").html("3.2.2.15.非对称解密接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("KeyDecryptDataTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -208,6 +239,7 @@
             }
         });
     }
+    //3.2.2.16.数字信封加密接口
     function KeyEncryptByDigitalEnvelope(){
         $.ajax({
             url:commonUrl+"/RS_KeyEncryptByDigitalEnvelope",
@@ -216,9 +248,8 @@
 
             },
             success:function(res){
-                $("#text").html("3.2.2.16.数字信封加密接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("KeyEncryptTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
@@ -226,6 +257,7 @@
             }
         });
     }
+    //3.2.2.17.数字信封解密接口
     function KeyDecryptByDigitalEnvelope(){
         $.ajax({
             url:commonUrl+"/RS_KeyDecryptByDigitalEnvelope",
@@ -233,9 +265,8 @@
             data:{
             },
             success:function(res){
-                $("#text").html("3.2.2.17.数字信封解密接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
+                var smg=JSON.stringify(res);
+                document.getElementById("KeyDecryptByDigitalTxt").innerHTML = smg;
                 console.log(res);
             },
             error:function(res){
